Change History
==============

0.14 (unreleased)
-----------------

- Add support for ZEO authentication.
  [wichert]


0.13 (2008-03-27)
-----------------

- Fixed call to HandleCommandLine by computing the serviceClassString
  ourselves if our module name is not __main__ (ie, if it was imported
  from another module). This works around the fact that
  HandleCommandLine calls GetServiceClassString which in turn only
  calculates the full path if the original module is __main__.
  [sidnei]

- Fixed generation of runzeo.bat when using ZEO from egg, where ZConfig is not
  in ZODB3_HOME.
  [rochael]

- Only generate the Windows service scripts if there is a zope2-location, since
  it's currently the only place where the nt_svcutils can be found.
  [rochael]

- Fixed test breakages on Windows.
  [rochael]

0.12 (2008-03-02)
-----------------

- Fixed zeopack generation so it includes zope-location.
  [tarek]

0.11 (2008-02-19)
-----------------

- Made Python 2.3 compatible
  [fschulze]

- Added win32 specific scripts.
  [tarek]

- Added a `zeo-log-custom` option.
  [tarek]

- Added a test environement and a basic doctest to validate the recipe.
  [tarek]

0.10 (2008-01-09)
-----------------

- Calculate the package working set outside of the recipe constructor. Closes
  https://bugs.launchpad.net/collective.buildout/+bug/180084
  [rochael]

0.9 (2007-12-30)
----------------

- Added `invalidation-queue-size` and `storage-number` options.
  [hannosch]

- Merged rochael-blobsupport branch. Added support for ZODB 3.8 blob storage
  configuration. This adds the blob-storage option. This closes
  https://bugs.launchpad.net/collective.buildout/+bug/179115 and
  https://bugs.launchpad.net/collective.buildout/+bug/179117.
  [rochael, hannosch]

- Renamed `zope-conf-additional` option to `zeo-conf-additional`.
  [rochael]

0.8
---

- Small documentation update. Added link to the bugtracker.
  [hannosch]
