@@ -29,7 +29,7 @@ plone.recipe.zope2instance::
 Let's run it::
 
     >>> print system(join('bin', 'buildout')),
-    Develop: '...plone.recipe.zope2zeoserver...'
+    Develop: '...'
     ...
     Installing zeo.
     Generated script '...zeo'.
@@ -143,5 +143,112 @@ folder in its paths, otherwise it won't work::
     >>> if os.name == 'nt':
     ...     zeopack += '-script.py'
     >>> repr(lib_dir) in open(zeopack).read()
+    True
+
+Custom Zeopack
+==============
+
+The generated zeopack script has to identify the ZEO server address from 
+the `zeo-address` parameter in the zeo buildout section. This parameter 
+may be just a port, a host and port combination, or a filesystem path to
+a Unix file socket. The generated script must contain correct values in
+either case.
+
+When just a port is given, the `zeopack` script will assume the host
+being the localhost address 127.0.0.1:
+
+    >>> write('buildout.cfg',
+    ... '''
+    ... [buildout]
+    ... parts = zeo
+    ... index = http://pypi.python.org/simple
+    ... develop = 
+    ...     %(recipe_location)s 
+    ...
+    ... [zeo]
+    ... recipe = plone.recipe.zope2zeoserver
+    ... zope2-location = %(zope_location)s
+    ... zeo-address = 8001
+    ... 
+    ... ''' % globals())
+    >>> print system(join('bin', 'buildout')),
+    Develop: '...'
+    Uninstalling zeo.
+    Installing zeo...
+
+Now check the values for `host`, `port` and `socket_path`::
+
+    >>> zeopack_path = os.path.join(sample_buildout, 'bin', 'zeopack')
+    >>> zeopack = open(zeopack_path, 'r').read()
+    >>> 'host = "127.0.0.1"' in zeopack
+    True
+    >>> 'port = "8001"' in zeopack
+    True
+    >>> 'socket_path = ""' in zeopack
+    True
+
+When a host:port combination is provided, the recipe must split it correctly::
+
+    >>> write('buildout.cfg',
+    ... '''
+    ... [buildout]
+    ... parts = zeo
+    ... index = http://pypi.python.org/simple
+    ... develop = 
+    ...     %(recipe_location)s 
+    ...
+    ... [zeo]
+    ... recipe = plone.recipe.zope2zeoserver
+    ... zope2-location = %(zope_location)s
+    ... zeo-address = 192.168.0.11:8001
+    ... 
+    ... ''' % globals())
+    >>> print system(join('bin', 'buildout')),
+    Develop: '...'
+    Uninstalling zeo.
+    Installing zeo...
+
+Now check the values for `host`, `port` and `socket_path`::
+
+    >>> zeopack_path = os.path.join(sample_buildout, 'bin', 'zeopack')
+    >>> zeopack = open(zeopack_path, 'r').read()
+    >>> 'host = "192.168.0.11"' in zeopack
+    True
+    >>> 'port = "8001"' in zeopack
+    True
+    >>> 'socket_path = ""' in zeopack
+    True
+
+If the `zeo-address`-parameter is a string it is assumed to be the path
+to a Unix socket file::
+
+    >>> write('buildout.cfg',
+    ... '''
+    ... [buildout]
+    ... parts = zeo
+    ... index = http://pypi.python.org/simple
+    ... develop = 
+    ...     %(recipe_location)s 
+    ...
+    ... [zeo]
+    ... recipe = plone.recipe.zope2zeoserver
+    ... zope2-location = %(zope_location)s
+    ... zeo-address = /path/to/zeo.socket
+    ... 
+    ... ''' % globals())
+    >>> print system(join('bin', 'buildout')),
+    Develop: '...'
+    Uninstalling zeo.
+    Installing zeo...
+
+Now check the values for `host`, `port` and `socket_path`::
+
+    >>> zeopack_path = os.path.join(sample_buildout, 'bin', 'zeopack')
+    >>> zeopack = open(zeopack_path, 'r').read()
+    >>> 'host = ""' in zeopack
+    True
+    >>> 'port = ""' in zeopack
+    True
+    >>> 'socket_path = "/path/to/zeo.socket"' in zeopack
     True
 
